Created using Popcode: https://popcode.org

--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
         </div>
         <img class="pic1" src="https://img.jakpost.net/c/2017/11/14/2017_11_14_35865_1510651634._large.jpg">
         <img class="pic1" src="https://a.openbible.info/blog/2015-01-hololens-microsoft.jpg">
+        <p>Sure, you have a fancy iPhone X or Pixel 2 that can take amazing photographs and handle even the most graphics-heavy games. But does it have holograms?
+AT&T and Verizon announced this week they will start selling a holographic smartphone later this year. The Red Hydrogen One smartphone is the first phone from video equipment company Red.
+
+The Android phone's killer feature is a "holographic display" that projects 3D images that can be viewed without special glasses. You will be able to view the images from the sides and behind, and interact with them using special hand gestures. It will also include cameras for capturing the custom 3D images.</p>
 
         <p class=""></p>
         <div class="section2">
